2004-10-24  Kevin Moule  <krmoule@cgl.uwaterloo.ca>

	* win32/*: Added Visual Studio .NET solution/project files.

2004-10-22  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (setShader): Improve error message a little.

	* src/UniformPanel.cpp (setShader): Handle palettes.

	* src/Shader.cpp (Shader::Shader): Initialize m_failed.
	(set_failed): Implement this.
	(failed): Implement this.

	* src/Shader.hpp: Add failed(), set_failed() and m_failed.

	* src/Makefile.am (shrike_SOURCES): Add PaletteExample.cpp.

	* src/shaders/PaletteExample.cpp: Add simple example of using palettes.

	* src/ShrikeFrame.cpp (setShader): Return booleans, handle
	exceptions properly.
	(showError): Implement this function.
	(onShaderSelect): Set shaders to red if they fail to load.

	* src/ShrikeFrame.hpp: Make setShader return a boolean.
	(showError): Add this function.
	
	* src/ShrikeCanvas.cpp: Lots of GL error checking (and ignoring
	for spurious ATI errors for now).

2004-10-08  Kevin Moule  <krmoule@cgl.uwaterloo.ca>

	* Makefile.win32, src/Makefile.win32, win32.mk: Updated makefiles
	to support release/debug only builds, turning off dependency
	generetion and explicit targets for release and debug builds.

2004-10-07  Kevin Moule  <krmoule@cgl.uwaterloo.ca>

	* win32.mk, src/Makefile.win32: Shrike needs glext.h, added
	appropriate makefile goo. makedepend doesn't recognize /I and
	/D, change all references to -I and -D

	* src/ShrikeFrame.cpp, src/ShrikeFrame.hpp: Cosmetic changes in
	menu, Fullscreen check updated when exiting fullscreen, Wireframe
	forces refresh, removed extraneous separator, added "..." to couple
	of entries.

2004-10-05  Kevin Moule  <krmoule@cgl.uwaterloo.ca>

	* win32.mk: Updated for building with Visual C++ 2005
	Express Beta 1.

	* src/shaders/Texter.cpp: Workaround for internal compiler
	error on Visual C++ 2005 Express Beta 1.

	* src/ShrikeGl.hpp: Fixed inconsistent function pointer
	definitions.
